Fixing image border on iPhone

--- a/spaceship-inside/medbay-styles.css
+++ b/spaceship-inside/medbay-styles.css
@@ -4,5 +4,7 @@
 
 .transform-image-selected{
     max-width: 40px;
-    border: black solid 2px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
 }
